[gd_scene load_steps=11 format=3 uid="uid://bvgvaxq4l543v"]

[ext_resource type="Script" uid="uid://dee4wjjgienl0" path="res://Scripts/player.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://cyu0tgd5mep0v" path="res://Textures/player_sprite_sheet.png" id="2_ude3g"]
[ext_resource type="Script" uid="uid://cly5owfacpraq" path="res://Scripts/pickup_controller.gd" id="3_gntrk"]
[ext_resource type="Script" uid="uid://bssf6yyqy4sgj" path="res://Scripts/handle_player_animations.gd" id="3_jmcll"]
[ext_resource type="AudioStream" uid="uid://ba1ri1uy3f38x" path="res://Audio/SFX/Death Stinger.wav" id="5_jmcll"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h54ih"]
radius = 184.0
height = 1210.0

[sub_resource type="Animation" id="Animation_t26db"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_4wape"]
resource_name = "walk"
length = 0.305
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fk5o5"]
_data = {
&"RESET": SubResource("Animation_t26db"),
&"walk": SubResource("Animation_4wape")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ude3g"]
size = Vector2(1237, 1259.13)

[node name="Player" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
floor_snap_length = 7.1
script = ExtResource("1_kyqiw")

[node name="Collision_A" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_h54ih")

[node name="Collision_B" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_h54ih")

[node name="A_Side" type="Node2D" parent="."]

[node name="Texture_A" type="Sprite2D" parent="A_Side"]
position = Vector2(0.375001, -0.125004)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_ude3g")
hframes = 11
script = ExtResource("3_jmcll")

[node name="AnimationPlayer" type="AnimationPlayer" parent="A_Side/Texture_A"]
libraries = {
&"": SubResource("AnimationLibrary_fk5o5")
}
speed_scale = 0.4

[node name="HoldSocket_A" type="Marker2D" parent="A_Side"]
position = Vector2(71, 21)

[node name="PickupController_A" type="Node" parent="A_Side"]
script = ExtResource("3_gntrk")
socket_path = NodePath("../HoldSocket_A")
pickup_area_path = NodePath("../PickupTrigger_A")

[node name="PickupTrigger_A" type="Area2D" parent="A_Side"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="A_Side/PickupTrigger_A"]
shape = SubResource("RectangleShape2D_ude3g")

[node name="B_Side" type="Node2D" parent="."]

[node name="Texture_B" type="Sprite2D" parent="B_Side"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_ude3g")
hframes = 11
script = ExtResource("3_jmcll")

[node name="AnimationPlayer" type="AnimationPlayer" parent="B_Side/Texture_B"]
libraries = {
&"": SubResource("AnimationLibrary_fk5o5")
}
speed_scale = 0.4

[node name="HoldSocket_B" type="Marker2D" parent="B_Side"]
position = Vector2(71, 21)

[node name="PickupController_B" type="Node" parent="B_Side"]
script = ExtResource("3_gntrk")
socket_path = NodePath("../HoldSocket_B")
pickup_area_path = NodePath("../PickupTrigger_B")

[node name="PickupTrigger_B" type="Area2D" parent="B_Side"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="B_Side/PickupTrigger_B"]
shape = SubResource("RectangleShape2D_ude3g")

[node name="WalkingSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = 20.0
max_distance = 10000.0
attenuation = 0.0

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jmcll")
volume_db = 20.0
max_distance = 10000.0
attenuation = 0.0

[node name="GizmoPickupSetdownSFX" type="AudioStreamPlayer2D" parent="."]

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
